[gd_scene load_steps=5 format=3 uid="uid://bqdrak1ed880t"]

[ext_resource type="Script" path="res://src/main.gd" id="1_2u3nm"]
[ext_resource type="PackedScene" uid="uid://cp2nerfeejhfq" path="res://scenes/product.tscn" id="1_q2awq"]
[ext_resource type="Theme" uid="uid://dvj4pjg1srxb3" path="res://theme.tres" id="2_r7fnr"]
[ext_resource type="PackedScene" uid="uid://dknb2mp2tvcjx" path="res://scenes/purchase.tscn" id="4_to0yq"]

[node name="shop" type="Node2D"]
script = ExtResource("1_2u3nm")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Check" type="Button" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -159.0
offset_top = 41.0
offset_right = -51.0
offset_bottom = 96.0
grow_horizontal = 0
theme = ExtResource("2_r7fnr")
text = "Check"

[node name="TabContainer" type="TabContainer" parent="CanvasLayer"]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 119.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_r7fnr")
theme_override_font_sizes/font_size = 34

[node name="Products" type="ScrollContainer" parent="CanvasLayer/TabContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="Products" type="VBoxContainer" parent="CanvasLayer/TabContainer/Products"]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ProductsButton" type="Button" parent="CanvasLayer/TabContainer/Products/Products"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme = ExtResource("2_r7fnr")
text = "load"

[node name="ProductsList" type="VBoxContainer" parent="CanvasLayer/TabContainer/Products/Products"]
layout_mode = 2

[node name="Product" parent="CanvasLayer/TabContainer/Products/Products/ProductsList" instance=ExtResource("1_q2awq")]
visible = false
layout_mode = 2

[node name="Purchases" type="ScrollContainer" parent="CanvasLayer/TabContainer"]
visible = false
layout_mode = 2
horizontal_scroll_mode = 0

[node name="Purchases" type="VBoxContainer" parent="CanvasLayer/TabContainer/Purchases"]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PurchasesButton" type="Button" parent="CanvasLayer/TabContainer/Purchases/Purchases"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("2_r7fnr")
text = "load"

[node name="PurchasesList" type="VBoxContainer" parent="CanvasLayer/TabContainer/Purchases/Purchases"]
layout_mode = 2

[node name="Purchase" parent="CanvasLayer/TabContainer/Purchases/Purchases/PurchasesList" instance=ExtResource("4_to0yq")]
visible = false
layout_mode = 2

[node name="Availability" type="Panel" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="CanvasLayer/Availability"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -101.5
offset_top = -18.5
offset_right = 111.5
offset_bottom = 18.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_r7fnr")
theme_override_font_sizes/font_size = 32
text = "Availability:"

[node name="CloseAvailable" type="Button" parent="CanvasLayer/Availability"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -163.0
offset_top = 37.0
offset_right = -46.0
offset_bottom = 101.0
grow_horizontal = 0
theme = ExtResource("2_r7fnr")
text = "Close"

[node name="PurchaseInfo" type="Panel" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="CanvasLayer/PurchaseInfo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -5.0
offset_top = 182.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_r7fnr")
theme_override_font_sizes/font_size = 34
autowrap_mode = 2

[node name="CloseInfo" type="Button" parent="CanvasLayer/PurchaseInfo"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -160.0
offset_top = 38.0
offset_right = -43.0
offset_bottom = 102.0
grow_horizontal = 0
theme = ExtResource("2_r7fnr")
text = "Close"
